--- a/src/web/test/event.html
+++ b/src/web/test/event.html
@@ -64,6 +64,10 @@
         .capture
         .self
         .once
+        .left - (2.2.0) 只当点击鼠标左键时触发。
+        .right - (2.2.0) 只当点击鼠标右键时触发。
+        .middle - (2.2.0) 只当点击鼠标中键时触发。
+        .passive - (2.3.0) 以 { passive: true } 模式添加侦听器
     -->
 
     <!-- 阻止单击事件冒泡 -->
