--- a/src/web/vue/html/button.html
+++ b/src/web/vue/html/button.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>测试button组件</title>
-    <script src="../../../vue/vue.js"></script>
 </head>
 <body>
 
-<div id="button">
+<a href="https://github.com/alisure-web/vue-single-file">
+    https://github.com/alisure-web/vue-single-file
+</a>
 
-</div>
 <script>
 
 </script>
